--- a/Part_0403_继承父类/filter.html
+++ b/Part_0403_继承父类/filter.html
@@ -9,13 +9,28 @@
 
 <body>
     <script>
-        // 筛选数组，返回新数组
+        // filter筛选数组，返回新数组
         var arr = [12, 10, 6, 88, 55, 7, 9];
         var newArr = arr.filter(function (value, index) {
             // return value >= 20;
             return value % 2 === 0;
         });
         console.log(newArr);
+
+        // some方法
+        var arr = [12, 23, 15];
+        var flag = arr.some(function (value) {
+            return value === 23;
+        });
+        console.log(flag);
+        var arr1 = ['red', 'pink', 'blue'];
+        var flag1 = arr1.some(function (value) {
+            return value === 'pink';
+        });
+        console.log(flag1);
+
+        // filter筛选数组  循环遍历数组中的每一个值，返回符合条件的所有值，返回的是一个新数组
+        // some筛选数组  找到符合条件的值就终止循环，返回的是一个布尔值
     </script>
 </body>
 
