--- a/Part_0405_函数/function_point3.html
+++ b/Part_0405_函数/function_point3.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <button>点击</button>
+    <button>点击</button>
+    <button>点击</button>
+    <button>点击</button>
     <script>
         // 改变this指向的三种方式  call()  apply()   bind()
 
@@ -26,6 +30,25 @@
 
         //  1.不会调用原来的函数，可以改变函数内部的this指向；
         //  2.返回的是原函数改变this之后产生的新函数；
+        //  3.如果有的函数我们不需要立即调用，但是又想改变这个函数内部的this指向此时用bind
+        //  4.我们有一个按钮，当我们点击了之后，就禁用这个按钮，3秒钟之后再开启这个按钮
+        // var btn = document.querySelector("button");
+        // btn.onclick = function () {
+        //     this.disabled = true;
+        //     setTimeout(function () {
+        //         this.disabled = false;
+        //     }.bind(this), 3000);
+        // }
+        var btns = document.querySelectorAll("button");
+        console.log(btns);
+        for (var i = 0; i < btns.length; i++) {
+            btns[i].onclick = function () {
+                this.disabled = true;
+                setTimeout(function () {
+                    this.disabled = false;
+                }.bind(this), 2000);
+            }
+        }
     </script>
 </body>
 
